# aifzms

./: .gitignore  create-shortcut.ps1  index.html  jeimianshezhi.txt  mk-shortcut.ps1  overlay.html  package-lock.json  package.json  record.html  start.bat  start.ps1  tailwind.config.js  tsconfig.app.json  vite.config.ts  xiugaiyaoqiu.txt
.cargo/: config.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-30-ai-interview-assistant.md
docs/superpowers/specs/: 2026-05-30-ai-interview-assistant-design.md
overlay-src/: OverlayApp.tsx  index.css  main.tsx
record-src/: RecordApp.tsx  index.css  main.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  store.rs
src/components/: Layout.tsx  QALibraryModal.tsx  Sidebar.tsx
src/components/ui/: form.tsx  toast.tsx
src/lib/: audioCapture.ts  commands.ts  deepseek.ts  deepseekService.ts  iflytek.ts  iflytekCrypto.ts  iflytekService.ts  resumeParser.ts  storage.ts
src/pages/: Help.tsx  Home.tsx  Records.tsx  Settings.tsx
src/stores/: interviewStore.ts
