[package]
name = "aifzms"
version = "0.1.0"
description = "AI Interview Assistant"
authors = ["akk-jay"]
edition = "2021"

[package.metadata]
productName = "AI面试助手"

[lib]
name = "aifzms_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
